# RPAFinder

./: README.md  demo.nb
mathematica/: LICENSE  README.md  RPAFinder.wl  examples.nb
python/: LICENSE  README.md  pyproject.toml
python/examples/: cholesterol-integrators.ipynb  examples.ipynb  yeast-integrators.ipynb
python/rpa_finder/: linalg.py  reaction_system.py  utils.py
python/tests/: test_reactionsystem.py
